# VoiceAiAssistant

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  pyproject.toml
app/backend/: dependencies.py  factories.py  schemas.py  services.py
app/backend/agent/: agent.py  ai_services.py  tools.py  utils.py
app/backend/api/: websocket_manager.py
app/backend/config/: config.py
app/backend/database/: database.py
app/backend/routers/: router.py
frontend/: index.html  script.js  style.css
