[project]
name = "voiceaiassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "groq>=0.22.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "openai>=1.75.0",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.1.3",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voiceaiassistant"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff] 
line-length=80

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5"
]
type = [
    "mypy>=1.14.1",
]
